fix programme legend on mobile

--- a/src/assets/scss/components/_programmehelpers.scss
+++ b/src/assets/scss/components/_programmehelpers.scss
@@ -5,6 +5,7 @@
 		box-shadow: none;
 		color: $amp-primary;
 		font-weight: $global-weight-normal;
+		font-size: rem-calc( 12 );
 
 		&::after {
 			content: url('../img/menu-arrow.svg');
